
- Fixed a bug that could cause Visual Studio to hang while opening or
  building solutions containing a large number of projects.

- Fixed a bug during project cleaning in which an exception was thrown
  when trying to remove generated files and the user is not authorized
  to remove the files.  

- Fixed a bug with solutions that contain unloaded projects. 


C# Changes
==========

- Minor marshalling/un-marshalling performance improvement (removed
  virtual specifier from streaming class).

- Added missing throwLocalException method to Ice.AsyncResult
  interface.


Java Changes
============

- Fixed a bug in the generated code for a Slice exception with no
  data members: constructors are now generated correctly.

- Fixed an IceSSL bug in which the IceSSL.Alias property was not
  working correctly.

- The mapping for Slice classes and structures now defines a
  serialVersionUID member. You can override the default UID using the
  metadata [java:serialVersionUID:<value>].


Python Changes
==============

- Fixed a bug that caused IceGrid activation of a Python server to
  hang when tracing was enabled for the server.


PHP Changes
===========

- Added compatibility with PHP 5.4.

- Fixed a bug in Ice_initialize: if an array was passed representing
  the command-line arguments, the function was not updating that array
  to remove Ice-specific options.

- It is no longer necessary to use call-time reference arguments when
  passing the command-line argument array to Ice_initialize and
  Ice_createProperties, as these functions now force their arguments
  to be passed by reference. For example, where you used to call a
  function like this:

  $communicator = Ice_initialize(&$argv);

  you can now use this:

  $communicator = Ice_initialize($argv);


======================================================================
Changes since version 3.4.1
======================================================================


General Changes
===============
